# OreMapper

./: Cargo.toml  OreMapper.todo  ReadMe.md
src/: main.rs  project.rs
src/lib/: egui_image.rs  image_draw.rs  math.rs  more_ui.rs
src/view/: atlas_view.rs  content_view.rs  editor_view.rs  inspector_view.rs
