[package]
name = "ore-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = "0.22.0"
egui_dnd = "0.4.0"

image = "0.24.6"
imageproc = "0.23.0"

uuid = { version = "1.3.3", features = ["v4"] }
env_logger = "0.10.0"
byteorder = "1.4.3"

nalgebra-glm = "0.18.0"
num = "0.4.0"

ordered-map = "0.4.2"
itertools = "0.10.5"
linked-hash-map = "0.5.6"
anyhow = "1.0.71"
walkdir = "2.3.3"

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.
