[package]
name = "ore-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = "0.22.0"

image = "0.24.6"
imageproc = "0.23.0"

nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
num = "0.4.0"

serde = "1.0.163"
serde_json = "1.0.96"

uuid = { version = "1.3.3", features = ["v4", "serde"] }
env_logger = "0.10.0"
byteorder = "1.4.3"

indexmap = { version = "1.9.3", features = ["serde"] }
itertools = "0.10.5"
walkdir = "2.3.3"
anyhow = "1.0.71"

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.

# [package.metadata.appimage]
# auto_link = true

[[bin]]
name = "ore-mapper"
path = "src/main.rs"
