[package]
name = "ore-mapper"
version = "1.0.0"
edition = "2021"

[features]
egui_file = ["dep:egui_file"]

[dependencies]
eframe = "*"
egui = "*"
egui_file = { version = "*", optional = true }
rfd = "*"

image = "*"
imageproc = "*"

nalgebra-glm = { version = "*", features = ["serde-serialize"] }
num = "*"

serde = "*"
serde_json = "*"

uuid = { version = "*", features = ["v4", "serde"] }
env_logger = "*"
byteorder = "*"

indexmap = { version = "*", features = ["serde"] }
itertools = "*"
walkdir = "*"
anyhow = "*"

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.

# [package.metadata.appimage]
# auto_link = true

[[bin]]
name = "OreMapper"
path = "src/main.rs"
